--- a/templates/figure.html
+++ b/templates/figure.html
@@ -6,21 +6,21 @@
 
   <h4>Figure</h4>
   <p><b>URL:</b> <a href="{{ url }}" target="_blank">{{ url }}</a></p>
-  <p><b>Caption:</b> {{ caption }}</p>
+  <p><b>Caption:</b> {{ caption_html|safe }}</p>
 
   <h5>Citing Paragraphs</h5>
-  {% if citing_paragraphs %}
-    {% for p in citing_paragraphs %}
-      <p>{{ p }}</p>
+  {% if citing_paragraphs_html %}
+    {% for p in citing_paragraphs_html %}
+      <p>{{ p|safe }}</p>
     {% endfor %}
   {% else %}
     <p>No citing paragraphs.</p>
   {% endif %}
 
   <h5>Semantic Context</h5>
-  {% if semantic_context %}
-    {% for p in semantic_context %}
-      <p>{{ p }}</p>
+  {% if semantic_context_html %}
+    {% for p in semantic_context_html %}
+      <p>{{ p|safe }}</p>
     {% endfor %}
   {% else %}
     <p>No semantic context paragraphs.</p>
