added figures id

--- a/templates/figure.html
+++ b/templates/figure.html
@@ -9,6 +9,7 @@
   </p>
 
   <h2>Figure</h2>
+  <p><b>Figure ID:</b> {{ figure.figure_id }}</p>
   <p><b>Paper ID:</b> {{ figure.paper_id }}</p>
   <p>
     <b>URL / Reference:</b>
