--- a/templates/figure.html
+++ b/templates/figure.html
@@ -23,7 +23,7 @@
   <h4>Caption</h4>
   <p>{{ figure.caption | safe }}</p>
 
-  <h4>Citing Paragraphs</h4>
+  <h4>Mentions</h4>
   {% if figure.citing_paragraphs %}
     {% for p in figure.citing_paragraphs %}
       <p>{{ p | safe }}</p>
